test/tests/stages/18_structures/invalid_parse/extra_credit/goto_kw_struct_tag.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  struct
  goto
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
